<resources>
    <string name="app_name">Kalkulator</string>
    <string name="number_1">1</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_0">0</string>
    <string name="dot">.</string>
    <string name="equal_symbol">=</string>
    <string name="plus_symbol">+</string>
    <string name="minus_symbol">-</string>
    <string name="time_symbol">x</string>
    <string name="c_symbol">C</string>
    <string name="plus_min_symbol">+/-</string>
    <string name="divide_symbol">/</string>
</resources>