<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <TextView
        android:id="@+id/tv_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_calculate_and_result"
        android:layout_alignParentEnd="true"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="30sp"
        tools:text="11111" />

    <TextView
        android:id="@+id/tv_calculate_and_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_group"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        tools:text="0000" />

    <TableLayout
        android:id="@+id/btn_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:stretchColumns="*">

        <TableRow>

            <Button
                android:id="@+id/btn_c_symbol"
                style="@style/Widget.App.Button"
                android:layout_weight="1"
                android:text="@string/c_symbol" />

            <Button
                android:id="@+id/btn_backspace"
                style="@style/Widget.App.Button"
                app:icon="@drawable/ic_outline_backspace_24"
                app:iconGravity="textStart"
                app:iconSize="40dp"
                app:iconTint="@android:color/white" />

            <Button
                android:id="@+id/btn_divide_symbol"
                style="@style/Widget.App.Button2"
                android:text="@string/divide_symbol" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_number_7"
                style="@style/Widget.App.Button"
                android:layout_weight="1"
                android:text="@string/number_7" />

            <Button
                android:id="@+id/btn_number_8"
                style="@style/Widget.App.Button"
                android:layout_weight="1"
                android:text="@string/number_8" />

            <Button
                android:id="@+id/btn_number_9"
                style="@style/Widget.App.Button"
                android:layout_weight="1"
                android:text="@string/number_9" />

            <Button
                android:id="@+id/btn_time_symbol"
                style="@style/Widget.App.Button2"
                android:layout_weight="1"
                android:text="@string/time_symbol" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_number_4"
                style="@style/Widget.App.Button"
                android:layout_weight="1"
                android:text="@string/number_4" />

            <Button
                android:id="@+id/btn_number_5"
                style="@style/Widget.App.Button"
                android:layout_weight="1"
                android:text="@string/number_5" />

            <Button
                android:id="@+id/btn_number_6"
                style="@style/Widget.App.Button"
                android:layout_weight="1"
                android:text="@string/number_6" />

            <Button
                android:id="@+id/btn_minus_symbol"
                style="@style/Widget.App.Button2"
                android:layout_weight="1"
                android:text="@string/minus_symbol" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_number_1"
                style="@style/Widget.App.Button"
                android:layout_weight="1"
                android:text="@string/number_1" />

            <Button
                android:id="@+id/btn_number_2"
                style="@style/Widget.App.Button"
                android:layout_weight="1"
                android:text="@string/number_2" />

            <Button
                android:id="@+id/btn_number_3"
                style="@style/Widget.App.Button"
                android:layout_weight="1"
                android:text="@string/number_3" />

            <Button
                android:id="@+id/btn_plus_symbol"
                style="@style/Widget.App.Button2"
                android:layout_weight="1"
                android:text="@string/plus_symbol" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_number_0"
                style="@style/Widget.App.Button"
                android:layout_weight="1"
                android:text="@string/number_0" />

            <Button
                android:id="@+id/btn_dot"
                style="@style/Widget.App.Button"
                android:text="@string/dot" />

            <Button
                android:id="@+id/btn_equal_symbol"
                style="@style/Widget.App.Button2"
                android:text="@string/equal_symbol" />
        </TableRow>
    </TableLayout>

</RelativeLayout>